# Yurii_Belousov_home_work

./: .coverage  README.md  main.py  processing.py  pyproject.toml
src/: masks.py  processing.py  widget.py
tests/: conftest.py  ignore_this_file_(tests).py  ignore_this_file_its_tests.py  test_main.py  test_masks.py  test_processing.py  test_widget.py
